src/test/ui/kindck/kindck-send-object.stderr
error[E0277]: `(dyn Dummy + 'static)` cannot be shared between threads safely
  --> $DIR/kindck-send-object.rs:12:5
   |
LL | fn assert_send<T:Send>() { }
   |                  ---- required by this bound in `assert_send`
...
LL |     assert_send::<&'static (dyn Dummy + 'static)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Dummy + 'static)` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `(dyn Dummy + 'static)`
   = note: required because of the requirements on the impl of `Send` for `&'static (dyn Dummy + 'static)`

error[E0277]: `dyn Dummy` cannot be sent between threads safely
  --> $DIR/kindck-send-object.rs:17:5
   |
LL | fn assert_send<T:Send>() { }
   |                  ---- required by this bound in `assert_send`
...
LL |     assert_send::<Box<dyn Dummy>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Dummy` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `dyn Dummy`
   = note: required because of the requirements on the impl of `Send` for `Unique<dyn Dummy>`
   = note: required because it appears within the type `Box<dyn Dummy>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
